--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "mongoose": "^6.3.4",
     "morgan": "~1.9.1"
