--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "cloudinary": "^1.28.1",
     "dotenv": "^16.0.1",
+    "js-cookie": "^3.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-google-login": "^5.2.2",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "swiper": "^8.1.6",
+    "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
