--- a/api/.env
+++ b/api/.env
@@ -1,5 +1,7 @@
 JWT_SECRET = secret
 
+BASE_URL = http://localhost:3000
+
 NODE_ENV= process.env.NODE_ENV || development
 HOST= process.env.HOST || 127.0.0.1
 PORT= 3000
