--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "alert": "^5.0.11",
     "antd": "^4.20.7",
     "axios": "^0.27.2",
     "cloudinary": "^1.28.1",
@@ -26,6 +27,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "sweet": "^0.1.1",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.1.6",
     "typescript": "^4.7.2",
     "web-vitals": "^2.1.4"
