--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.8.0",
     "@mui/material": "^5.8.1",
     "@mui/x-data-grid": "^5.12.0",
+    "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux-devtools-extension": "^2.13.9",
+    "rsuite": "^5.14.0",
     "sweet": "^0.1.1",
     "sweetalert": "^2.1.2",
     "swiper": "^8.1.6",
