--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@mui/x-data-grid": "^5.12.0",
     "@paypal/react-paypal-js": "^7.8.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "@sweetalert2/themes": "^5.0.11",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
