email confirmacion compra

--- a/api/.env
+++ b/api/.env
@@ -2,8 +2,8 @@ JWT_SECRET = secret
 
 BASE_URL = http://localhost:3000/
 
-NODE_ENV= process.env.NODE_ENV  development
-HOST= process.env.HOST  127.0.0.1
+NODE_ENV= process.env.NODE_ENV || development
+HOST= process.env.HOST || 127.0.0.1
 PORT= 3000
 
 DB_USER = 3techpfinal
@@ -11,11 +11,14 @@ DB_PASS = 3techpfinal
 DB_NAME = test
 DB_CLUSTER = cluster0.8tjjl
 
-MAIL_HOST = smtp.gmail.com
-MAIL_PORT = 587
-MAIL_USER = 3techpfinal
-MAIL_PASS = henry2022!
+# MAIL_HOST = smtp.gmail.com
+# MAIL_USER = 3techpfinal@gmail.com 
 
+MAIL_HOST = smtp-mail.outlook.com
+MAIL_USER = t3chpfinal@outlook.es 
+
+MAIL_PORT = 587
+MAIL_PASS = henry2022!
 
 GOOGLE_CLIENT_ID=715638807647-7hjrrq0c7iqu0imiku0hc9nnmbo762h2.apps.googleusercontent.com
 GOOGLE_SECRET_ID=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
