--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node ./bin/www"
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -17,7 +17,6 @@
     "dotenv": "^16.0.1",
     "express": "~4.16.1",
     "express-validator": "^6.14.1",
-    "google-auth-library": "^8.0.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
     "jsonwebtoken": "^8.5.1",
