--- a/api/.env
+++ b/api/.env
@@ -6,10 +6,15 @@ NODE_ENV= process.env.NODE_ENV  development
 HOST= process.env.HOST  127.0.0.1
 PORT= 3000
 
-DB_USER = 3techpfinal
-DB_PASS = 3techpfinal
-DB_NAME = test
-DB_CLUSTER = cluster0.8tjjl
+DB_USER1 = 3techpfinal
+DB_PASS1 = 3techpfinal
+DB_NAME1 = test
+DB_CLUSTER1 = cluster0.8tjjl
+
+DB_USER_MIO = 3techpfinal
+DB_PASS_MIO = 3techpfinal
+DB_NAME_MIO = test
+DB_CLUSTER_MIO = cluster0.8tjjl
 
 MAIL_HOST = smtp.gmail.com
 MAIL_PORT = 587
