--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "cloudinary": "^1.28.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "js-cookie": "^3.0.1",
     "react": "^18.1.0",
